--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     <link rel="apple-touch-icon" href="/public/img/logo.png" />
     <title>ANYONGSE</title>
     <script src="https://kit.fontawesome.com/94b8e6bbb3.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&display=swap" rel="stylesheet">
     <script src='https://cdn.lightwidget.com/widgets/lightwidget.js'></script>
 
   </head>
