--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/public/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+  <head>  
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <meta name="description" content="ANYONGSE | Teaching Artist" />
+    <meta property="og:title" content="ANYONGSE |Teaching Artist|" />
+    <meta property="og:url" content="http://anyongse.com/" />
+    <meta name="twitter:image" content="/public/img/logo.png" />
+    <meta name="twitter:description" content="Creative & Education" />
+    <meta
+    name="keywords"
+    content="놀이예술, 연극교육, 예술교육, 아동움직임, 크레이터, 강사, 교육연극, 참여예술, 아동연극, 청소년연극, 티칭아티스트, Education, Movement, art, teaching, artist, teachingartist, ANYONGSE, creative, playtraching"/>
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="apple-touch-icon" href="/public/img/logo.png" />
+    <meta name="author" content="ANYONGSE">
     <title>ANYONGSE</title>
     <script src="https://kit.fontawesome.com/94b8e6bbb3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
