fix matadata (img, favicon)

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <meta name="description" content="ANYONGSE | Teaching Artist" />
     <meta property="og:title" content="ANYONGSE |Teaching Artist|" />
     <meta property="og:url" content="http://anyongse.com/" />
-    <meta name="twitter:image" content="/public/img/logo.png" />
+    <meta name="twitter:image" href="/public/img/logo.png" />
     <meta name="twitter:description" content="Creative & Education" />
     <meta
     name="keywords"
     content="놀이예술, 연극교육, 예술교육, 아동움직임, 크레이터, 강사, 교육연극, 참여예술, 아동연극, 청소년연극, 티칭아티스트, Education, Movement, art, teaching, artist, teachingartist, ANYONGSE, creative, playtraching"/>
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico" />
     <link rel="apple-touch-icon" href="/public/img/logo.png" />
     <meta name="author" content="ANYONGSE">
     <title>ANYONGSE</title>
