--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="ANYONGSE | Teaching Artist" />
     <meta property="og:title" content="ANYONGSE |Teaching Artist|" />
     <meta property="og:url" content="http://anyongse.com/" />
-    <meta property="og:image" content="%PUBLIC_URL%/img/logo.png" />
+    <meta property="og:image" href="%PUBLIC_URL%/img/logo.png" />
     <meta name="twitter:image" href="%PUBLIC_URL%/img/logo.png" />
     <meta name="twitter:description" content="Creative & Education" />
     <meta
