fix matadata img size

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="ANYONGSE | Teaching Artist" />
     <meta property="og:title" content="ANYONGSE |Teaching Artist|" />
     <meta property="og:url" content="http://anyongse.com/" />
-    <meta property="og:image" href="%PUBLIC_URL%/img/logo.png" />
-    <meta name="twitter:image" href="%PUBLIC_URL%/img/logo.png" />
+    <meta property="og:image" href="%PUBLIC_URL%/img/logo_s.png" />
+    <meta name="twitter:image" href="%PUBLIC_URL%/img/logo_s.png" />
     <meta name="twitter:description" content="Creative & Education" />
     <meta
     name="keywords"
@@ -17,7 +17,7 @@
     <link rel=" shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo_ss.png" />
     <meta name="author" content="ANYONGSE">
     <title>ANYONGSE</title>
     <script src="https://kit.fontawesome.com/94b8e6bbb3.js" crossorigin="anonymous"></script>
