fix matadata logo

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="ANYONGSE | Teaching Artist" />
     <meta property="og:title" content="ANYONGSE |Teaching Artist|" />
     <meta property="og:url" content="http://anyongse.com/" />
-    <meta property="og:image" href="%PUBLIC_URL%/img/logo_s.png" />
-    <meta name="twitter:image" href="%PUBLIC_URL%/img/logo_s.png" />
-    <meta name="twitter:description" content="Creative & Education" />
+    <meta property="og:image" content="%PUBLIC_URL%/img/logo_s.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/img/logo_s.png" />
+    <meta name="twitter:description" content="Creative & Education" /> 
     <meta
     name="keywords"
     content="놀이예술, 연극교육, 예술교육, 아동움직임, 크레이터, 강사, 교육연극, 참여예술, 아동연극, 청소년연극, 티칭아티스트, Education, Movement, art, teaching, artist, teachingartist, ANYONGSE, creative, playtraching"/>
