--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <meta name="description" content="ANYONGSE | Teaching Artist" />
+    <meta name="description" content="ANYONGSE_Teaching Artist" />
     <meta property="og:title" content="ANYONGSE |Teaching Artist|" />
     <meta property="og:url" content="http://anyongse.com/" />
     <meta property="og:image" content="%PUBLIC_URL%/img/logo_s.png" />
