--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <title>ANYONGSE</title>
     <script src="https://kit.fontawesome.com/94b8e6bbb3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <script src='https://cdn.lightwidget.com/widgets/lightwidget.js'></script>
 
   </head>
